# Legal-Intelligence-Platform

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml  test_db.py
backend/alembic/: env.py
backend/alembic/versions/: 54be34061c8c_add_user_role.py  a54a367bcf02_add_documents_table.py  f9d2b28be9b0_create_users_table.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/dependencies/: auth.py  roles.py
backend/app/api/v1/endpoints/: auth.py  documents.py  health.py
backend/app/core/: config.py  exceptions.py  handlers.py  logging.py  security.py
backend/app/crud/: document.py  user.py
backend/app/db/: database.py  session.py
backend/app/models/: document.py  user.py
backend/app/schemas/: document.py  user.py
backend/app/services/: chunker.py  embedding.py  indexing_service.py  storage.py
backend/app/services/ingestion/: batch_indexer.py  checkpoint_manager.py  ingestion_pipeline.py  metadata.py  scanner.py
backend/app/services/loaders/: base.py  csv_loader.py  docx_loader.py  html_loader.py  loader_factory.py  markdown_loader.py  pdf_loader.py  txt_loader.py
backend/app/services/vectorstores/: qdrant_store.py
backend/scripts/: ingest_corpus.py
backend/storage/qdrant/: meta.json
