[project]
name = "legal-intelligence-backend"
version = "0.1.0"
description = "Backend API for the LexIntel AI Legal Intelligence Platform."
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
